[gd_scene load_steps=3 format=2]

[ext_resource path="res://MainGui.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.160784, 0.160784, 0.160784, 0.352941 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.811765, 0.811765, 0.811765, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="MainGui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 26.54
margin_top = 19.5934
margin_right = 126.54
margin_bottom = 67.5934
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 90.0
margin_bottom = 42.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 80.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 37.0
margin_bottom = 14.0
text = "Lives:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NLives" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 41.0
margin_right = 49.0
margin_bottom = 14.0
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 80.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 39.0
margin_bottom = 14.0
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 43.0
margin_right = 51.0
margin_bottom = 14.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelName" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -133.072
margin_top = 116.768
margin_right = 127.928
margin_bottom = 282.768
mouse_filter = 1
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelName"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="PanelName/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 251.0
margin_bottom = 156.0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelName/MarginContainer/CenterContainer"]
margin_left = 51.0
margin_top = 52.0
margin_right = 189.0
margin_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelName/MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 138.0
margin_bottom = 14.0
mouse_filter = 1
text = "Your Name is not set!"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelName/MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 138.0
margin_bottom = 42.0

[node name="LineEdit" type="LineEdit" parent="PanelName/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 102.0
margin_bottom = 24.0
mouse_filter = 1
size_flags_horizontal = 3
placeholder_text = "Name"

[node name="Button" type="Button" parent="PanelName/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 106.0
margin_right = 138.0
margin_bottom = 24.0
mouse_filter = 1
text = "Set"

[node name="LeaderboardPanel" type="PanelContainer" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -127.0
margin_top = 25.0
margin_right = -27.0
margin_bottom = 51.0
mouse_filter = 1
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="LeaderboardPanel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 98.0
margin_bottom = 24.0
mouse_filter = 1
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="LeaderboardPanel/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 86.0
margin_bottom = 12.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PanelName/MarginContainer/CenterContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_set_name_pressed"]
